Fri Jan  7 10:02:02 2005  Nanbor Wang  <nanbor@cs.wustl.edu>

	* DAnCE/RTNodeApplication/RTServer_Impl.cpp (init): Changed to
	  call the virtual function defined by the parent explicitly with
	  this pointer to work around a VC6 bug.

Wed Jan  5 15:20:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/DomainApplicationManager/Deployment_Configuration.inl:
        * DAnCE/tests/Config_Handlers/Handler_Test.i:
          Removed inl/i file, updated h,cpp

Wed Jan  5 14:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Assembly_Deployer/Deployment_Configuration.{h,cpp,inl}:
        * tools/XML_Helpers/XML_Utils.{h,cpp,inl}:
          Removed inl file, updated h,cpp

Wed Jan  5 10:45:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/RTNodeApplication/RTServer_Impl.h:
          Fixed compile problem in emulated exception builds due to
          incorrect environment macro

Mon Jan  3 10:01:09 2005  Nanbor Wang  <nanbor@cs.wustl.edu>

	* DAnCE/RTNodeApplication/README:
	* DAnCE/RTNodeApplication/NodeApplication_Task.cpp:
	* DAnCE/RTNodeApplication/NodeApplication_Task.h:
	* DAnCE/RTNodeApplication/NodeApplication_Task.inl:
	* DAnCE/RTNodeApplication/RTNodeApplication.cpp:
	* DAnCE/RTNodeApplication/RTNodeApplication.mpc:
	* DAnCE/RTNodeApplication/RTServer_Impl.cpp:
	* DAnCE/RTNodeApplication/RTServer_Impl.h:
	* DAnCE/RTNodeApplication/RTServer_Impl.inl:
	* DAnCE/RTNodeApplication/senv.sh: Added a minimal
	  real-time-enabled NodeApplication server.

Mon Jan  3 12:20:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/CCM_Core.mpc:
        * DAnCE/ciao/CCM_Core.mpc:
          Added ciaoversion as base project to all projects so that SOVERSION
          is set to the correct version number in the GNU makefiles

Thu Dec 30 13:24:16 2004  Chris Cleeland  <cleeland@ociweb.com>

        * CIAO version 0.4.3 released.

Local Variables:
add-log-time-format: current-time-string
End: