@@ -63,10 +63,6 @@ namespace CIAO
       /// Destructor
       virtual ~RTNodeApplication_Impl (void);
 
-      /// Initialize the ComponentServer with a name.
-      CORBA::Long init (ACE_ENV_SINGLE_ARG_DECL_WITH_DEFAULTS)
-        ACE_THROW_SPEC ((CORBA::SystemException));
-
     protected:
       RTCORBA::RTORB_var rtorb_;
     };
